<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wickedwitchwarsaw.udacityscholarshipprojectquizzapp.QuizzAppPage2">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/questionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/answerQ6checkBox1"
                style="@style/answerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer6A"/>

            <CheckBox
                android:id="@+id/answerQ6checkBox2"
                style="@style/answerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer6B"/>

            <CheckBox
                android:id="@+id/answerQ6checkBox3"
                style="@style/answerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer6C"/>

            <CheckBox
                android:id="@+id/answerQ6checkBox4"
                style="@style/answerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer6D"/>

        </LinearLayout>


        <TextView
            style="@style/questionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/answerQ7checkBox1"
                style="@style/answerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer7A"/>

            <CheckBox
                android:id="@+id/answerQ7checkBox2"
                style="@style/answerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer7B"/>

            <CheckBox
                android:id="@+id/answerQ7checkBox3"
                style="@style/answerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer7C"/>

            <CheckBox
                android:id="@+id/answerQ7checkBox4"
                style="@style/answerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer7D"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/penguin_war_small" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/penguin_rock_small" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/penguin_war_small" />

        </LinearLayout>

        <TextView
            style="@style/questionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question8"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/answerQ8checkBox1"
                style="@style/answerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer8A"/>

            <CheckBox
                android:id="@+id/answerQ8checkBox2"
                style="@style/answerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer8B"/>

            <CheckBox
                android:id="@+id/answerQ8checkBox3"
                style="@style/answerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer8C"/>

            <CheckBox
                android:id="@+id/answerQ8checkBox4"
                style="@style/answerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer8D"/>

        </LinearLayout>


        <TextView
            style="@style/questionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/answerQ9checkBox1"
                style="@style/answerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer9A"/>

            <CheckBox
                android:id="@+id/answerQ9checkBox2"
                style="@style/answerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer9B"/>

            <CheckBox
                android:id="@+id/answerQ9checkBox3"
                style="@style/answerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer9C"/>

            <CheckBox
                android:id="@+id/answerQ9checkBox4"
                style="@style/answerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer9D"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnNextPage2"
            style="@style/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
