<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wickedwitchwarsaw.udacityscholarshipprojectquizzapp.QuizzAppPage3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/questionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question10" />

        <EditText
            android:id="@+id/answerQ10text"
            style="@style/answerStyleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/questionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question11" />

        <EditText
            android:id="@+id/answerQ11text"
            style="@style/answerStyleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/questionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question12" />

        <EditText
            android:id="@+id/answerQ12text"
            style="@style/answerStyleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/questionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question13" />

        <EditText
            android:id="@+id/answerQ13text"
            style="@style/answerStyleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/penguin_gentleman_small" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/penguin_knight_small" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/penguin_gentleman_small" />


        </LinearLayout>


        <ImageButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/submit_quizz" />

    </LinearLayout>

</ScrollView>
